Create Main List page and use it as default

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -119,9 +119,9 @@
 			"routes": [
 				{
 					"pattern": "",
-					"name": "worklist",
+					"name": "mainList",
 					"target": [
-						"worklist"
+						"mainList"
 					]
 				},
 				{
@@ -152,6 +152,10 @@
 				"notFound": {
 					"viewName": "NotFound",
 					"viewId": "notFound"
+				},
+				"mainList": {
+					"viewType": "XML",
+					"viewName": "MainList"
 				}
 			}
 		}
