Add barcode scanning in Stock Overview list and fix key split in detail

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -228,6 +228,10 @@
 				"stockOverviewDetail": {
 					"viewType": "XML",
 					"viewName": "StockOverviewDetail"
+				},
+				"StocktakeList": {
+					"viewType": "XML",
+					"viewName": "StocktakeList"
 				}
 			}
 		}
