--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -80,6 +80,13 @@
 				"settings": {
 					"localUri": "localService/API_BUSINESS_PARTNER/metadata.xml"
 				}
+			},
+			"MatDoc": {
+				"uri": "/S4HANA_CLOUD/sap/opu/odata/sap/API_MATERIAL_DOCUMENT_SRV/",
+				"type": "OData",
+				"settings": {
+					"localUri": "localService/API_MATERIAL_DOCUMENT_SRV/metadata.xml"
+				}
 			}
 		},
 		"sourceTemplate": {
@@ -206,9 +213,7 @@
 			"attachmentSrv": {
 				"type": "sap.ui.model.odata.v2.ODataModel",
 				"settings": {
-					"defaultOperationMode": "Server",
-					"defaultBindingMode": "OneWay",
-					"defaultCountMode": "Request"
+					"defaultBindingMode": "TwoWay"
 				},
 				"dataSource": "Attachment",
 				"preload": true
@@ -231,6 +236,16 @@
 					"defaultCountMode": "Request"
 				},
 				"dataSource": "BusinessPartner",
+				"preload": true
+			},
+			"matDocSrv": {
+				"type": "sap.ui.model.odata.v2.ODataModel",
+				"settings": {
+					"defaultOperationMode": "Server",
+					"defaultBindingMode": "OneWay",
+					"defaultCountMode": "Request"
+				},
+				"dataSource": "MatDoc",
 				"preload": true
 			}
 		},
