Fix attachment issue and nav to List after post

--- a/neo-app.json
+++ b/neo-app.json
@@ -1,4 +1,8 @@
 {
+  "headerWhiteList": [
+	"BusinessObjectTypeName",
+	"LinkedSAPObjectKey"
+  ],
   "routes": [
     {
       "path": "/webapp/resources",
