Deployed the app in S4HC and adjusted Manifest and Neo App JSON files for it to work

--- a/neo-app.json
+++ b/neo-app.json
@@ -45,10 +45,11 @@
       "description": "SAPUI5 Test Resources"
     },
     {
-      "path": "/S4HANA_CLOUD",
+      "path": "/sap/opu/odata",
       "target": {
         "type": "destination",
-        "name": "S4HANA_CLOUD"
+        "name": "S4HANA_CLOUD",
+        "entryPath": "/sap/opu/odata"
       },
       "description": "S4HANA Cloud System"
     }
