--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -87,6 +87,13 @@
 				"settings": {
 					"localUri": "localService/API_MATERIAL_DOCUMENT_SRV/metadata.xml"
 				}
+			},
+			"CustomPOItem": {
+				"uri": "/sap/opu/odata/sap/YY1_WAREHOUSE_POITEM_CDS/",
+				"type": "OData",
+				"settings": {
+					"localUri": "localService/YY1_WAREHOUSE_POITEM_CDS/metadata.xml"
+				}
 			}
 		},
 		"sourceTemplate": {
@@ -260,6 +267,16 @@
 					"defaultCountMode": "Request"
 				},
 				"dataSource": "MatDoc",
+				"preload": true
+			},
+			"customPOItemSrv": {
+				"type": "sap.ui.model.odata.v2.ODataModel",
+				"settings": {
+					"defaultOperationMode": "Server",
+					"defaultBindingMode": "OneWay",
+					"defaultCountMode": "Request"
+				},
+				"dataSource": "CustomPOItem",
 				"preload": true
 			}
 		},
