--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -94,6 +94,13 @@
 				"settings": {
 					"localUri": "localService/YY1_WAREHOUSE_PRDORDITEM_CDS/metadata.xml"
 				}
+			},
+			"CustomPhysInv": {
+				"uri": "/sap/opu/odata/sap/YY1_WAREHOUSE_PHYSINVITEM_CDS/",
+				"type": "OData",
+				"settings": {
+					"localUri": "localService/YY1_WAREHOUSE_PHYSINVITEM_CDS/metadata.xml"
+				}
 			}
 		},
 		"sourceTemplate": {
@@ -277,6 +284,16 @@
 					"defaultCountMode": "Request"
 				},
 				"dataSource": "CustomProdOrd",
+				"preload": true
+			},
+			"customPhysInvSrv": {
+				"type": "sap.ui.model.odata.v2.ODataModel",
+				"settings": {
+					"defaultOperationMode": "Server",
+					"defaultBindingMode": "OneWay",
+					"defaultCountMode": "Request"
+				},
+				"dataSource": "CustomPhysInv",
 				"preload": true
 			}
 		},
