Changes for Covalent •	NEW MENU: Reservations – Picking (copy of menu item Goods Issue Reservations): 1)	Add filters for: 1.	Reservation number 2.	Plant 3.	Storage location 4.	EAM work order 2)	Add fields in list display: 1.	Plant 2.	Storage location 3.	EAM work order Add new Staging Area field. On post the staging area is set and the status set to Staged.
New menu item - Staged Reservation. Includes a button which changes the staging status to Handed out to Requestor.

Addition of filter items in the Stock Overview screen

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -109,6 +109,27 @@
 					"localUri": "localService/YY1_WAREHOUSE_RESVITEM_CDS/metadata.xml"
 				}
 			},
+			"CustomResvHead": {
+				"uri": "/sap/opu/odata/sap/YY1_WAREHOUSE_RESVHEADER_CDS/",
+				"type": "OData",
+				"settings": {
+					"localUri": "localService/YY1_WAREHOUSE_RESVHEADER_CDS/metadata.xml"
+				}
+			},
+			"CustomResvStaging": {
+				"uri": "/sap/opu/odata/sap/YY1_RESVITEMSTAGINGAREA_CDS/",
+				"type": "OData",
+				"settings": {
+					"localUri": "localService/YY1_RESVITEMSTAGINGAREA_CDS/metadata.xml"
+				}
+			},
+			"CustomStagedResv": {
+				"uri": "/sap/opu/odata/sap/YY1_WAREHOUSE_STAGEDRESVIT_CDS/",
+				"type": "OData",
+				"settings": {
+					"localUri": "localService/YY1_WAREHOUSE_STAGEDRESVIT_CDS/metadata.xml"
+				}
+			},
 			"CustomPlantMaterial": {
 				"uri": "/sap/opu/odata/sap/YY1_WAREHOUSE_MATPLANT_CDS/",
 				"type": "OData",
@@ -334,6 +355,36 @@
 				"dataSource": "CustomResvItem",
 				"preload": true
 			},
+			"customResvHeadSrv": {
+				"type": "sap.ui.model.odata.v2.ODataModel",
+				"settings": {
+					"defaultOperationMode": "Server",
+					"defaultBindingMode": "OneWay",
+					"defaultCountMode": "Request"
+				},
+				"dataSource": "CustomResvHead",
+				"preload": true
+			},
+			"customResvStagingSrv": {
+				"type": "sap.ui.model.odata.v2.ODataModel",
+				"settings": {
+					"defaultOperationMode": "Server",
+					"defaultBindingMode": "OneWay",
+					"defaultCountMode": "Request"
+				},
+				"dataSource": "CustomResvStaging",
+				"preload": true
+			},
+			"customStagedResvSrv": {
+				"type": "sap.ui.model.odata.v2.ODataModel",
+				"settings": {
+					"defaultOperationMode": "Server",
+					"defaultBindingMode": "OneWay",
+					"defaultCountMode": "Request"
+				},
+				"dataSource": "CustomStagedResv",
+				"preload": true
+			},
 			"customPlantMaterialSrv": {
 				"type": "sap.ui.model.odata.v2.ODataModel",
 				"settings": {
@@ -500,6 +551,27 @@
 					"target": [
 						"pickingDeliveryDetail"
 					]
+				},
+				{
+					"pattern": "PickingResvList",
+					"name": "pickingResvList",
+					"target": [
+						"pickingResvList"
+					]
+				},
+				{
+					"pattern": "PickingResvDetail//{documentNo}",
+					"name": "pickingResvDetail",
+					"target": [
+						"pickingResvDetails"
+					]
+				},
+				{
+					"pattern": "StagedResvList",
+					"name": "stagedResvList",
+					"target": [
+						"stagedResvList"
+					]
 				}
 			],
 			"targets": {
@@ -604,6 +676,24 @@
 					"viewName": "PickingDeliveryDetail",
 					"viewId": "pickingDeliveryDetail",
 					"title": "Picking Outbound Delivery"
+				},
+				"pickingResvList": {
+					"viewType": "XML",
+					"viewName": "PickingResvList",
+					"viewId": "pickingResvList",
+					"title": "Picking Reservation"
+				},
+				"pickingResvDetail": {
+					"viewType": "XML",
+					"viewName": "PickingResvDetail",
+					"viewId": "pickingResvDetail",
+					"title": "Picking Reservation"
+				},
+				"stagedResvList": {
+					"viewType": "XML",
+					"viewName": "StagedResvList",
+					"viewId": "stagedResvList",
+					"title": "Staged Reservation"
 				},
 				"objectNotFound": {
 					"viewName": "ObjectNotFound",
